// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connector routes check configurable routes 1`] = `
Array [
  <Route
    component={[Function]}
    exact={false}
    path="/a"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/a/1"
  />,
  <Route
    component={[Function]}
    exact={false}
    path="/a/2"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/a/2/1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/ab/2/1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/b/1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/b/login/register"
  />,
]
`;

exports[`connector routes check static routes 1`] = `
Array [
  <Route
    component={[Function]}
    exact={true}
    path="/static1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/static2"
  />,
]
`;

exports[`connector routes getRoutes based on index path 1`] = `
Array [
  <Route
    component={[Function]}
    exact={true}
    path="/static1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/static2"
  />,
  <Route
    component={[Function]}
    exact={false}
    path="/a"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/a/1"
  />,
  <Route
    component={[Function]}
    exact={false}
    path="/a/2"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/a/2/1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/ab/2/1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/b/1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/b/login/register"
  />,
]
`;

exports[`connector routes merge static routes and configurable routes 1`] = `
Array [
  <Route
    component={[Function]}
    exact={true}
    path="/static1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/static2"
  />,
  <Route
    component={[Function]}
    exact={false}
    path="/a"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/a/1"
  />,
  <Route
    component={[Function]}
    exact={false}
    path="/a/2"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/a/2/1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/ab/2/1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/b/1"
  />,
  <Route
    component={[Function]}
    exact={true}
    path="/b/login/register"
  />,
]
`;

exports[`loading success 1`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":false,"timedOut":false,"error":null}
</div>
`;

exports[`loading success 2`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":true,"timedOut":false,"error":null}
</div>
`;

exports[`loading success 3`] = `
<div>
  MyComponent 
  {"prop":"foo"}
</div>
`;

exports[`loading success 4`] = `
<div>
  MyComponent 
  {"prop":"bar"}
</div>
`;
